--- a/cells/shared/InitialsList.styl
+++ b/cells/shared/InitialsList.styl
@@ -18,7 +18,7 @@
     border-radius 4px
     color text-color
     font-weight bold
-    padding 1px 4px 1px 4px
+    padding 0px 4px 1px 4px
     border 1px solid rgba(lighten(#36729F,100%),.5)
     box-shadow 0px 1px 2px rgba(#000,.5)
     text-shadow none
